================= Unreleased ==================
; Feature ; Minor ; Compiler ; #5492
Added common subexpression elimination of builtin math operators.

; Feature ; Major ; Build system ; #5489
Adding posibility to run Python tests in both 32 and 64 bit modes.

; Fixed ; Minor ; Compiler ; #5486
Fixed circularity bug in variability calculation

================= Stable-2017-10-18 ==================
; Change ; Major ; Compiler; #5468
Removed CAD generation

; Fixed ; Minor ; Compiler ; #5478
Fixed a bug where external constant evaluation of functions using external objects did not include all resource annotations

; Fixed ; Minor ; Compiler ; #5482
Fixed a bug where instance tree was kept 

; Change ; Major ; PyFMI; #5479
Changed default file storing method to binary format. 

; Fixed ; Minor ; Build system ; #5459
Fixed so that the Python_64 folder isn't created when there
is no Python 64 bit distribution available.
 
; Feature ; Minor ; PyFMI ; #5475
Added support for getting the declared type when using FMI2.

; Fixed ; Minor ; PyFMI ; #5476
Fixed issue with results for parameters when using memory storing option.

; Feature ; Major ; Build system; #5459
Added support for building CasADi in 32 and 64 bit modes
in parallel when 64 bit Python and Ipopt available.
 
================= Stable-2017-10-05 ==================
; Feature ; Minor ; PyFMI ; #5470
Added support to store result files on binary format.

================= Stable-2017-09-28 ==================
; Change ; Minor ; Build system ; #5459
Refactored configure.ac.

; Change ; Minor ; Examples ; #5459
Updated furuta example asserts to correspond to updated FMU.

; Fixed ; Minor ; Compiler ; #5465
Added derivative attribute to dummy derivatives in model description so it's FMI compliant.

; Changed; Minor; Tests; #5459
Updated more of tests_jmodelica FMUs to have 64 bit binaries as well.

; Changed; Minor; Tests; #5459
Updated tests_jmodelica FMUs to have 64 bit binaries as well.
